<resources>
    <string name="app_name">SMS to Telegram</string>

    <string name="notification_channel_id" translatable="false">SMS_TO_TELEGRAM_NOTIFICATION_CHANNEL</string>
    <string name="notification_channel_name" translatable="false">SMS to Telegram Notifications</string>
    <string name="notification_content_text">Listening for new sms and phone calls…</string>

    <string name="general_permissions_grant_button_text">Grant Permissions</string>
    <string name="general_permission_rationale_title">Required permissions</string>
    <string name="general_permission_rationale_message">These all permissions are needed in order to read sms and incoming call\'s phone number</string>
    <string name="general_permission_denied_message">SMS and phone call permissions are required in order to take a read received sms and incoming call\'s phone number</string>

    <string name="input_dialog_button_paste_from_clipboard">Paste from Clipboard</string>

    <string name="preference_category_bot_settings_title">Bot Settings</string>
    <string name="preference_chat_id_title">Chat ID</string>
    <string name="preference_chat_id_summary">Unique identifier for the target chat or username of the target channel (in the format @channelusername)</string>

    <string name="preference_token_id_title">Token ID</string>
    <string name="preference_token_id_summary">Token is required to authorize the bot and send requests to the Bot API where you can get from BotFather.</string>

    <string name="preference_help">Help</string>

    <string name="preference_category_permissions_title">Permissions</string>
    <string name="preference_category_permissions_given">All required permissions are already given</string>

    <string name="onboarder_page_token_id_title">Set Your Token ID</string>
    <string name="onboarder_page_token_id_description">You should enter your Token ID in order to receive SMS or incoming call notifications from your bot.</string>
    <string name="onboarder_page_token_id_button_text">Set Token ID</string>
    <string name="onboarder_page_chat_id_title">Set Your Chat ID</string>
    <string name="onboarder_page_chat_id_button_text">Set Chat ID</string>
    <string name="onboarder_page_chat_id_description">You should enter your Chat ID in order to receive SMS or incoming call notifications from your bot.</string>

</resources>