<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:icon="@drawable/ic_robot_black_24dp"
        android:key="preference_category_bot_settings"
        android:title="@string/preference_category_bot_settings_title">

        <Preference
            android:key="preference_token_id"
            android:summary="@string/preference_token_id_summary"
            android:title="@string/preference_token_id_title" />

        <Preference
            android:key="preference_chat_id"
            android:summary="@string/preference_chat_id_summary"
            android:title="@string/preference_chat_id_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/ic_baseline_permission_black_24dp"
        android:key="preference_category_permission_settings"
        android:title="@string/preference_category_permissions_title">

        <Preference
            android:key="preference_grant_permissions"
            android:title="@string/general_permissions_grant_button_text" />

    </PreferenceCategory>

    <Preference
        android:icon="@drawable/ic_baseline_help_24dp"
        android:key="preference_help"
        android:title="@string/preference_help" />
</PreferenceScreen>